# Project-JARMS

./: .gitignore  README.md
STT_Alibaba/: .env  .env.example  captioner.py  list_gemini_models.py  main.py  pipeline_output.txt  pureadio.py  stt_triage.py  supabase_migration.sql  test_gemini_speed.py  transcript_interviewcoolies_20260307_163529.txt  transcript_interviewcoolies_20260307_212218.txt  transcript_interviewcoolies_20260307_212650.txt  transcript_interviewcoolies_20260307_213233.txt  transcript_interviewcoolies_20260308_012609.txt  transcript_interviewcoolies_20260308_014144.txt  transcript_interviewcoolies_20260308_014540.txt  transcript_interviewcoolies_20260308_015313.txt  triage_protocol.md
backend/: .env  main.py  policy.json  pyproject.toml
backend/core/: settings.py  supabase.py
backend/routers/: beneficiaries.py  cases.py
backend/services/: captioner.py
backend/services/triage/: pureadio.py  queue.py  run_triage.py  situationeval.py  stt_triage.py
frontend/: README.md
frontend/src/: index.css
frontend/src/components/AlertDetail/: AlertDetail.jsx
frontend/src/components/AlertList/: AlertList.css  AlertList.jsx
frontend/src/components/StatsBar/: StatsBar.css  StatsBar.jsx
frontend/src/hooks/: useAlertWebSocket.js
frontend/src/pages/: AlertButton.jsx  Dashboard.jsx
frontend/src/store/: alertsSlice.js
